--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@ body{
 	text-align: center;
 	padding: 0;
 }
+.brand-logo {
+	font-family: 'Hanalei Fill', cursive;
+	float: left;
+}
 .nav-wrapper a{
 	color: black;
 }
@@ -40,10 +44,12 @@ body{
 	background: red;
 }
 
+.color-empty{
+	color:red;
+	text-align: center;
+}
 
-
-.contenedor-table
-{
+.contenedor-table{
 	padding: 1em 3em;
 	margin: auto;
 	margin-top: 2em;
